--- a/pug/entries.pug
+++ b/pug/entries.pug
@@ -233,7 +233,20 @@
     ]
   }
 
-
+-
+  entries["tuscon"] = {
+    name: "Tuscon",
+    folder: "tuscon-2017",
+    short_date: "Feb 2017",
+    long_date: "February 2017",
+    highlight: 9,
+    groups: [
+      {
+        name: "Tuscon",
+        pictures: range(1, 9)
+      }
+    ]
+  }
 //- - var TUSCON = {name: "Tuscon", folder: 'tuscon-2017', date: "Feb 2017", size: 9, highlight: 9};
 //- - TUSCON.locations = range(1, 9, {name: "Tuscon", lat: 32.221743, lng: -110.926479});
 //- -  places.push(TUSCON)
