--- a/pug/entries.pug
+++ b/pug/entries.pug
@@ -296,13 +296,26 @@
       },
     ]
   }
+  
+-
+  entries["seattle"] = {
+    name: "Seattle",
+    folder: "seattle-2016",
+    short_date: "Nov 2016",
+    long_date: "November 2016",
+    highlight: 6,
+    groups: [
+      {
+        name: "Seattle",
+        pictures: range(1, 8)
+      },
+      {
+        name: "Hurricane Ridge",
+        pictures: range(9, 18)
+      }
+    ]
+  }
 
-//- - var SEATTLE = {name: "Seattle", folder: 'seattle-2016', date: "Nov 2016", size: 18, highlight: 6};
-//- - var seattle = {name: "Seattle", lat: 47.606209, lng: -122.332071};
-//- - var ridge = {name: "Huricane Ridge", lat: 47.933146, lng: -123.409627};
-//- - SEATTLE.locations = flatten([range(1, 8, seattle), range(9, 18, ridge)]);
-//- -  places.push(SEATTLE)
-//- 
 //- - var SPAIN = {name: "Spain & Portugal", folder: 'spain-portugal-2016', date: "May 2016", size: 23, highlight: 13};
 //- - var bilbao = {name: "Bilbao", lat: 43.263013, lng: -2.934985};
 //- - var picos = {name: "Picos de Europa", lat: 43.187216, lng: -4.821524};
