Port Spain and Portugal

--- a/sass/insight.scss
+++ b/sass/insight.scss
@@ -39,7 +39,7 @@ header.insight {
 
     .headline-inside-wrapper {
       @include align-self(center);
-      margin: $one-space;
+      margin: $two-space;
       text-align: left;
 
       h1 {
