Use relative size for max size

--- a/sass/insight.scss
+++ b/sass/insight.scss
@@ -89,7 +89,7 @@ section.insight {
 
   .full, .combined {
     width: 100%;
-    max-width: 1160px;
+    max-width: 70vw;
     @include box-sizing(border-box);
   }
 
