--- a/pug/entries.pug
+++ b/pug/entries.pug
@@ -1,6 +1,44 @@
 - function range(start, end) { var r = []; for (var i = start; i <= end; i++) { r.push(i); } return r; };
 
 - var entries = {}
+  
+- 
+  entries["miami"] = {
+    name: "Miami",
+    folder: "miami-2019",
+    short_date: "Mar 2019",
+    long_date: "March 2019",
+    highlight: 14,
+    groups: [
+      {
+        name: "Miami Beach",
+        pictures: [
+          12,
+          [11, 13],
+          14,
+        ]
+      },
+      {
+        name: "Everglades National Park",
+        pictures: [
+          1,
+          [7, 2],
+          3,
+          4,
+          [6, 5]
+        ]
+      },
+      {
+        name: "Keywest",
+        pictures: [
+          8,
+          9,
+          10,
+        ]
+      }
+    ]
+  }  
+  
 - 
   entries["palm-springs"] = {
     name: "Palm Springs",
