--- a/pug/entries.pug
+++ b/pug/entries.pug
@@ -3,6 +3,41 @@
 - var entries = {}
   
 - 
+  entries["nyc-cruise"] = {
+    name: "Cruise in New York City",
+    folder: "nyc-cruise-2019",
+    short_date: "Apr 2019",
+    long_date: "April 2019",
+    highlight: 1,
+    groups: [
+      {
+        name: "Bay",
+        pictures: [
+          2,
+          5,
+          [4, 3],
+        ]
+      },
+      {
+        name: "Bridges",
+        pictures: [
+          8,
+          [7, 6],
+        ]
+      },
+      {
+        name: "Uptown",
+        pictures: [
+          9,
+          10,
+          [1, 11],
+          12,
+        ]
+      }
+    ]
+  }  
+  
+- 
   entries["miami"] = {
     name: "Miami",
     folder: "miami-2019",
