--- a/pug/entries.pug
+++ b/pug/entries.pug
@@ -3,6 +3,37 @@
 - var entries = {}
   
 - 
+  entries["berlin"] = {
+    name: "Berlin",
+    folder: "berlin-2019",
+    short_date: "Jul 2019",
+    long_date: "July 2019",
+    highlight: 11,
+    groups: [
+      {
+        name: "Downtown",
+        pictures: [
+          5,
+          [1, 4],
+          6,
+          [7, 8],
+          11,
+          [9, 10]
+        ]
+      },
+      {
+        name: "Kreuzberg",
+        pictures: [
+          3,
+          2,
+          12,
+          13
+        ]
+      },
+    ]
+  }  
+  
+- 
   entries["nyc-cruise"] = {
     name: "Cruise in New York City",
     folder: "nyc-cruise-2019",
