--- a/pug/entries.pug
+++ b/pug/entries.pug
@@ -1,6 +1,37 @@
 - function range(start, end) { var r = []; for (var i = start; i <= end; i++) { r.push(i); } return r; };
 
 - var entries = {}
+
+- 
+  entries["munich"] = {
+    name: "Munich",
+    folder: "munich-2019",
+    short_date: "Jul 2019",
+    long_date: "July 2019",
+    highlight: 5,
+    groups: [
+      {
+        name: "Downtown",
+        pictures: [
+          10,
+          [8, 9],
+          13,
+          7,
+          4,
+          [1, 2],
+          3,
+          5
+        ]
+      },
+      {
+        name: "Deutsches Museum",
+        pictures: [
+          6,
+          [11, 12],
+        ]
+      },
+    ]
+  }  
   
 - 
   entries["berlin"] = {
