--- a/pug/entries.pug
+++ b/pug/entries.pug
@@ -1,6 +1,82 @@
 - function range(start, end) { var r = []; for (var i = start; i <= end; i++) { r.push(i); } return r; };
 
 - var entries = {}
+  
+- 
+  entries["dolomites"] = {
+    name: "Dolomites",
+    folder: "dolomites-2019",
+    short_date: "Jul 2019",
+    long_date: "July 2019",
+    highlight: 35,
+    groups: [
+      {
+        name: "Kitzbuhel",
+        pictures: [
+          2,
+          [1, 4],
+          3,
+          5,
+          6,
+          [7, 9],
+          [10, 8],
+        ]
+      },
+      {
+        name: "Parco naturale Puez Odle",
+        pictures: [
+          13,
+          14,
+          12,
+          [11, 17],
+          15,
+          16
+        ]
+      },
+      {
+        name: "Abbazia di Novacella",
+        pictures: [
+          19,
+          18,
+          21,
+          20,
+        ]
+      },
+      {
+        name: "Tyrol Valley",
+        pictures: [
+          22,
+          [24, 23],
+          25,
+          26,
+          27,
+          28,
+          29,
+          31,
+          [30, 32],
+          [34, 33],
+          36,
+          35
+        ]
+      },
+      {
+        name: "Nationalpark Berchtesgaden",
+        pictures: [
+          37,
+          39,
+          38,
+        ]
+      },
+      {
+        name: "Salzburg",
+        pictures: [
+          40,
+          42,
+          [41, 43],
+        ]
+      },
+    ]
+  }  
 
 - 
   entries["munich"] = {
