Add new entries (#2)
* Add Miami

* Add NYC cruise

* Add Berlin

* Add Munich

* Add Dolomites

--- a/pug/entries.pug
+++ b/pug/entries.pug
@@ -1,6 +1,217 @@
 - function range(start, end) { var r = []; for (var i = start; i <= end; i++) { r.push(i); } return r; };
 
 - var entries = {}
+  
+- 
+  entries["dolomites"] = {
+    name: "Dolomites",
+    folder: "dolomites-2019",
+    short_date: "Jul 2019",
+    long_date: "July 2019",
+    highlight: 35,
+    groups: [
+      {
+        name: "Kitzbuhel",
+        pictures: [
+          2,
+          [1, 4],
+          3,
+          5,
+          6,
+          [7, 9],
+          [10, 8],
+        ]
+      },
+      {
+        name: "Parco naturale Puez Odle",
+        pictures: [
+          13,
+          14,
+          12,
+          [11, 17],
+          15,
+          16
+        ]
+      },
+      {
+        name: "Abbazia di Novacella",
+        pictures: [
+          19,
+          18,
+          21,
+          20,
+        ]
+      },
+      {
+        name: "Tyrol Valley",
+        pictures: [
+          22,
+          [24, 23],
+          25,
+          26,
+          27,
+          28,
+          29,
+          31,
+          [30, 32],
+          [34, 33],
+          36,
+          35
+        ]
+      },
+      {
+        name: "Nationalpark Berchtesgaden",
+        pictures: [
+          37,
+          39,
+          38,
+        ]
+      },
+      {
+        name: "Salzburg",
+        pictures: [
+          40,
+          42,
+          [41, 43],
+        ]
+      },
+    ]
+  }  
+
+- 
+  entries["munich"] = {
+    name: "Munich",
+    folder: "munich-2019",
+    short_date: "Jul 2019",
+    long_date: "July 2019",
+    highlight: 5,
+    groups: [
+      {
+        name: "Downtown",
+        pictures: [
+          10,
+          [8, 9],
+          13,
+          7,
+          4,
+          [1, 2],
+          3,
+          5
+        ]
+      },
+      {
+        name: "Deutsches Museum",
+        pictures: [
+          6,
+          [11, 12],
+        ]
+      },
+    ]
+  }  
+  
+- 
+  entries["berlin"] = {
+    name: "Berlin",
+    folder: "berlin-2019",
+    short_date: "Jul 2019",
+    long_date: "July 2019",
+    highlight: 11,
+    groups: [
+      {
+        name: "Downtown",
+        pictures: [
+          5,
+          [1, 4],
+          6,
+          [7, 8],
+          11,
+          [9, 10]
+        ]
+      },
+      {
+        name: "Kreuzberg",
+        pictures: [
+          3,
+          2,
+          12,
+          13
+        ]
+      },
+    ]
+  }  
+  
+- 
+  entries["nyc-cruise"] = {
+    name: "Cruise in New York City",
+    folder: "nyc-cruise-2019",
+    short_date: "Apr 2019",
+    long_date: "April 2019",
+    highlight: 1,
+    groups: [
+      {
+        name: "Bay",
+        pictures: [
+          2,
+          5,
+          [4, 3],
+        ]
+      },
+      {
+        name: "Bridges",
+        pictures: [
+          8,
+          [7, 6],
+        ]
+      },
+      {
+        name: "Uptown",
+        pictures: [
+          9,
+          10,
+          [1, 11],
+          12,
+        ]
+      }
+    ]
+  }  
+  
+- 
+  entries["miami"] = {
+    name: "Miami",
+    folder: "miami-2019",
+    short_date: "Mar 2019",
+    long_date: "March 2019",
+    highlight: 14,
+    groups: [
+      {
+        name: "Miami Beach",
+        pictures: [
+          12,
+          [11, 13],
+          14,
+        ]
+      },
+      {
+        name: "Everglades National Park",
+        pictures: [
+          1,
+          [7, 2],
+          3,
+          4,
+          [6, 5]
+        ]
+      },
+      {
+        name: "Keywest",
+        pictures: [
+          8,
+          9,
+          10,
+        ]
+      }
+    ]
+  }  
+  
 - 
   entries["palm-springs"] = {
     name: "Palm Springs",
