--- a/pug/header.pug
+++ b/pug/header.pug
@@ -12,6 +12,7 @@ mixin header(path, presenter)
         
         link(rel="icon" type="image/png" href="#{path}/favicon-32x32.png" sizes="32x32")
         link(rel="icon" type="image/png" href="#{path}/favicon-16x16.png" sizes="16x16")
+        link(rel="icon" type="image/x-icon" href="#{path}/favicon.ico")
 
 
         link(rel='stylesheet', type='text/css', href=path + '/all.css')
