Fix path interpolation

--- a/pug/header.pug
+++ b/pug/header.pug
@@ -10,9 +10,9 @@ mixin header(path, presenter)
         meta(name='description', content = "Down to Earth. Going out to change my galaxy.")
         meta(name='keywords', content = 'Adrien, Cadet, travel, pictures, photos, hope, beauty, life, world')
         
-        link(rel="icon" type="image/png" href="#{path}/favicon-32x32.png" sizes="32x32")
-        link(rel="icon" type="image/png" href="#{path}/favicon-16x16.png" sizes="16x16")
-        link(rel="icon" type="image/x-icon" href="#{path}/favicon.ico")
+        link(rel="icon" type="image/png" href=path + "/favicon-32x32.png" sizes="32x32")
+        link(rel="icon" type="image/png" href=path + "/favicon-16x16.png" sizes="16x16")
+        link(rel="icon" type="image/x-icon" href=path + "/favicon.ico")
 
 
         link(rel='stylesheet', type='text/css', href=path + '/all.css')
