--- a/pug/insight.pug
+++ b/pug/insight.pug
@@ -1,5 +1,5 @@
 mixin insight(entry)
-  +header('../', 'Insight')
+  +header('..', 'Insight')
 
   header.insight
     .highlight(style="background-image: url('../imgs/" + entry.folder + "/" + entry.highlight + ".jpg')")
