--- a/pug/entries.pug
+++ b/pug/entries.pug
@@ -1,7 +1,66 @@
 - function range(start, end) { var r = []; for (var i = start; i <= end; i++) { r.push(i); } return r; };
 
 - var entries = {}
-  
+    
+- 
+  entries["new-orleans"] = {
+    name: "New Orleans",
+    folder: "new-orleans-2019",
+    short_date: "Nov 2019",
+    long_date: "November 2019",
+    highlight: 1,
+    groups: [
+      {
+        name: "Bywater",
+        pictures: [
+          1,
+          [2, 4],
+          3
+        ]
+      },
+      {
+        name: "French Quarter",
+        pictures: [
+          [5, 8],
+          7,
+          6,
+          29,
+          28
+        ]
+      },
+      {
+        name: "Garden District",
+        pictures: [
+          23,
+          [22, 24],
+          27,
+          25,
+          26
+        ]
+      },
+      {
+        name: "Jean Lafitte Preserve",
+        pictures: [
+          10,
+          [9, 11],
+          12,
+          [13, 15],
+          14
+        ]
+      },
+      {
+        name: "Oak Alley Plantation",
+        pictures: [
+          18,
+          19,
+          20,
+          [16, 17],
+          21
+        ]
+      },
+    ]
+  }
+
 - 
   entries["dolomites"] = {
     name: "Dolomites",
