Add Brooklyn Fall

--- a/pug/entries.pug
+++ b/pug/entries.pug
@@ -1,6 +1,30 @@
 - function range(start, end) { var r = []; for (var i = start; i <= end; i++) { r.push(i); } return r; };
 
 - var entries = {}
+
+- 
+  entries["brooklyn-fall"] = {
+    name: "Brooklyn Fall",
+    folder: "brooklyn-fall-2020",
+    short_date: "Nov 2020",
+    long_date: "November 2020",
+    highlight: 1,
+    groups: [
+      {
+        name: "Clinton Hill",
+        pictures: [
+          4,
+          5,
+          1,
+          8,
+          7,
+          11,
+          [9, 10],
+          6
+        ]
+      },
+    ]
+  }
     
 - 
   entries["new-orleans"] = {
