--- a/pug/entries.pug
+++ b/pug/entries.pug
@@ -364,6 +364,21 @@
         pictures: [
           [10, 11],
           9,
+          23,
+          [22, 24],
+          [21, 25],
+          31,
+          [29, 30],
+          33,
+          32,
+          [26, 27],
+          28,
+          34,
+        ]
+      },
+      {
+        name: "Vatican",
+        pictures: [
           [12, 13],
           17,
           18,
@@ -372,20 +387,7 @@
           [16, 20],
           35,
           [36, 37],
-          23,
-          [22, 24],
-          [21, 25],
-          31,
-          [29, 30],
-          33,
-          32,
-          [27, 28],
-          34
-        ]
-      },
-      {
-        name: "Vatican",
-        pictures: range(12, 20).concat(range(35, 37))
+        ],
       }
     ]
   }
